tests/fixtures/valid/match_expr.airl
;; EXPECT: 42
(match (Ok 42) (Ok v) v (Err e) 0)
