tests/fixtures/type_errors/non_exhaustive_match.airl
;; ERROR: NonExhaustive
;; Match missing Err variant for Result type
(match (Err "e") (Ok v) v)
